# arca_arg

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.arca/: pyvenv.cfg
arca_api/: auth.py  settings.py  ws_service.py  ws_sr_constancia_inscripcion.py  ws_sr_padron_a10.py  wsfecred.py  wsfev1.py  wslpg.py
arca_api/data/: arcaTestCert.pem  raulotest.key  ws_sr_constancia_inscripcion.pkl  ws_sr_padron_a10.pkl  wsfe.pkl  wsfecred.pkl  wslpg.pkl
arca_arg/: auth.py  settings.py  webservice.py  wsService.py
docs/: arca_arg.html  index.html  search.js
docs/arca_arg/: auth.html  settings.html  webservice.html  wsService.html
ejemplos/: ArcaArgEj.ipynb
examples/: CPE.py  FE.py  FECRED.py  LPG.py  const_inscripcion.py  padronA10.py
