[metadata]
name = arca_arg
version = 0.1.0
author = Raul E. Lopez Briega
author_email = relopezbriega@gmail.com
description = API para interactuar con los Web Services de ARCA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/relopezbriega/arca_arg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    zeep
    cryptography
python_requires = >=3.8
